--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   font-family: 'Amiko', sans-serif;
+  @apply bg-gray-50;
 }
 .ant-btn-primary {
   /* Tailwinde ile, renk çakışması oldu */
